<resources>
    <!--<string name="app_name">Cheetah 1.7.4</string>-->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--server calls ERROR messages-->
    <string name="str_retrofit_failure">Error Server Response</string>
    <string name="str_login">Login</string>
    <string name="str_login_detail_fetch">Fetching Login Data</string>
    <string name="str_login_successful">User Login</string>
    <string name="str_error_login">Error While Login</string>
    <string name="str_sync_complete">Sync Data Completed</string>
    <string name="str_error_sync_data">Error While Synchronizing Data</string>
    <string name="str_synchronizing_data">Synchronizing Data</string>
    <string name="str_synchronizing_data_started">Synchronizing Data Started</string>

    <!--drawer base nav items-->
    <string name="str_nav_zone_list">Zone List</string>
    <string name="str_nav_depot_list">Depot List</string>
    <string name="str_route_list">Route List</string>
    <string name="str_nav_remarks_summary">Remarks Summary</string>
    <string name="str_nav_planner">Planner</string>
    <string name="str_nav_logout">Logout</string>

    <!--drawer items names-->
    <string name="str_nav_route_list_home">Route List Home</string>
    <string name="str_nav_sale_status">Sale Status</string>
    <string name="str_nav_dashboard">Dashboard</string>
    <string name="str_nav_sku_sale_detail">SKU Sale Details</string>
    <string name="str_van_stock">Van Stock</string>
    <string name="str_outlet_sale_lt_100">Sale &lt; 100</string>
    <string name="str_outlet_sale_inv_time_diff">Sale Time Diff</string>
    <string name="str_route_remark">Route Remark</string>


    <!--home invoice drawer item names-->
    <string name="str_nav_route_home">Route Home</string>
    <string name="str_nav_today_sale">Today\'s Sale</string>
    <!--<string name="str_nav_sale_rej_history">Sale &amp; Rejection History</string>-->
    <string name="str_nav_sale_rej_history">Sale History</string>
    <string name="str_nav_remark">Remark</string>
    <string name="str_nav_outlet_info">Outlet Info</string>


    <string name="str_nav_payment">Payment</string>
    <string name="str_nav_crate_management">Crates Management</string>
    <!--<string name="str_nav_tomorrow_order">Tomorrow\'s Order</string>-->
    <string name="str_nav_market_product">Market Product</string>
    <string name="str_nav_final_invoice">Invoice</string>

    <string name="strRupee">\u20B9</string>
    <string name="strBullet">\u2022</string>
    <string name="strHollowBullet">\u25CB</string>
    <string name="strFilledArrow">\u25BA</string>
    <string name="strBulletCash">\u25CF Cash</string>
    <string name="strBulletUPI">\u25CF UPI Payment</string>
    <string name="strBulletCheque">\u25CF Cheque Payment</string>

    <string name="title_activity_product_list_select">ProductListSelectActivity</string>

    <string name="status_stop"><font color='#FF8E8E93'>Stopped</font></string> <!--gray-->
    <string name="status_completed"><font color='#FF4CD964'>COMPLETED</font></string> <!--red-->
    <string name="status_pending"><font color='#FFFF3B30'>PENDING</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
