<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_nav_route_list_home" />
        <item
            android:id="@+id/nav_home_route"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_nav_sale_status" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_nav_dashboard" />

        <item
            android:id="@+id/nav_sku_sale_detail"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_nav_sku_sale_detail" />

        <item
            android:id="@+id/nav_van_stock"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_van_stock" />
        <item
            android:id="@+id/nav_outlet_sale_lt_100"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_outlet_sale_lt_100" />
        <item
            android:id="@+id/nav_sale_complete_time_diff"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/str_outlet_sale_inv_time_diff" />
    </group>
</menu>