<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.hgil.siconprocess.activity.fragments.dashboard.DaySummaryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRouteName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBackgroundBlack"
                android:elevation="5dp"
                android:gravity="center"
                android:text="Title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_extra_large" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Target Calls"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvTargetCalls"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Total Calls"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvTotalCalls"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Productive Calls"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvProductiveCalls"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Total Bill Value"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvTotalBillValue"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Avg Bill Value"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvAvgBillValue"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Today's Collection"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvTodayCollection"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Total O/S"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvTotalOS"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBackgroundBlack" />
            <!--amount collection over route-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="Today's Collection"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTotalCollection"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/strBulletCash"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvCash"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/strBulletUPI"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvUPI"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/strBulletCheque"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvCheque"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorWhite"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
